dynamic agent architecture